force-app/main/default/objects/CustomCheckoutValidation__c/CustomCheckoutValidation__c.object-meta.xml
<CustomObject>
    <label>Custom Checkout Validation</label>
    <nameField>
        <displayFormat>CCV-{00000}</displayFormat>
        <label>Custom Checkout Validation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Custom Checkout Validations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>