force-app/main/default/objects/CustomCheckoutValidation__c/fields/ApexClassName__c.field-meta.xml
<CustomField>
    <fullName>ApexClassName__c</fullName>
    <description>Programmatic validation - reference an apex class validation extension.</description>
    <inlineHelpText>Reference an apex class validation extension.</inlineHelpText>
    <label>Apex Class Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>