force-app/main/default/objects/CustomCheckoutValidation__c/fields/FlowApiName__c.field-meta.xml
<CustomField>
    <fullName>FlowApiName__c</fullName>
    <description>Programmatic validation - reference a flow validation extension.</description>
    <inlineHelpText>Reference a flow validation extension.</inlineHelpText>
    <label>Flow API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>