force-app/main/default/objects/CustomCheckoutValidation__c/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <description>Message to be displayed when validation rule blocks an order checkout.</description>
    <inlineHelpText>Message to be displayed when validation rule blocks an order checkout.</inlineHelpText>
    <label>Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>