force-app/main/default/objects/CustomCheckoutValidation__c/fields/ValidatedField__c.field-meta.xml
<CustomField>
    <fullName>ValidatedField__c</fullName>
    <description>API Name of Order field to validate.</description>
    <inlineHelpText>Specify the Order field (API Name) to validate.</inlineHelpText>
    <label>Validated Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>