force-app/main/default/objects/CustomCheckoutValidation__c/fields/ValidationOperator__c.field-meta.xml
<CustomField>
    <fullName>ValidationOperator__c</fullName>
    <description>Operator to compare the Validated Field against the Validation Value.</description>
    <inlineHelpText>Select the Operator to compare the Validated Field against the Validation Value.</inlineHelpText>
    <label>Validation Operator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ValidationOperator</valueSetName>
    </valueSet>
</CustomField>