force-app/main/default/objects/CustomCheckoutValidation__c/fields/ValidationValue__c.field-meta.xml
<CustomField>
    <fullName>ValidationValue__c</fullName>
    <description>Value that will be compared against the Validated Field</description>
    <inlineHelpText>Specify the validation value that will be compared against the Validated Field.</inlineHelpText>
    <label>Validation Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>