force-app/main/default/objects/CustomCheckoutValidation__c/recordTypes/Configured.recordType-meta.xml
<RecordType>
    <fullName>Configured</fullName>
    <active>true</active>
    <label>Configured</label>
</RecordType>