force-app/main/default/objects/CustomCheckoutValidation__c/recordTypes/Programmatic.recordType-meta.xml
<RecordType>
    <fullName>Programmatic</fullName>
    <active>true</active>
    <label>Programmatic</label>
</RecordType>